# cfasttext

./: CMakeLists.txt
fixes/: args.cc
include/: cfasttext.h
lib/: cfasttext.cc
